[package]
name = "mt_lintocirc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
noodles = { version = "0.72.0", features = ["bam", "core", "sam" ] }
noodles-util = { version = "0.44.0", features = ["alignment"] }
log = "0.4"
bstr = "1.9.1"
