[package]
name = "mt_lintocirc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.6"
noodles = { version = "0.79.0", features = ["bam", "core", "sam" ] }
noodles-util = { version = "0.50.0", features = ["alignment"] }
log = "0.4"
bstr = "1.9.1"
anyhow = "1.0"
